manifests/openshift/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: airgap-architect-frontend
  labels:
    app: airgap-architect
    component: frontend
    app.kubernetes.io/name: airgap-architect-frontend
    app.kubernetes.io/part-of: airgap-architect
    app.kubernetes.io/component: frontend
spec:
  to:
    kind: Service
    name: airgap-architect-frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
